feat: implement active lfr-tunnel healthcheck and status polling (#87)